--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Create an article</h1>
+<h1>Edit exisiting article</h1>
 
 <% if @article.errors.any? %>
-<h2>The following errors preventing the Article from being created:</h2>
+<h2>The following errors preventing the Article from being edited:</h2>
   <ul>
     <% @article.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
@@ -21,6 +21,7 @@
   <p>
     <%= f.submit %>
   </p>
+
 <% end %>
 
-<%= link_to "Back to articles listing", articles_path %>
+<%= link_to "Back to article listing", articles_path %>
