--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,6 @@
 <p>
   Description: <%= @article.description %>
 </p>
+
+<%= link_to "Back to articles listing", articles_path %> |
+<%= link_to "Edit Article", edit_article_path(@article) %>
