--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,27 +1,4 @@
 <h1>Edit exisiting article</h1>
 
-<% if @article.errors.any? %>
-<h2>The following errors preventing the Article from being edited:</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+render <%= render 'form' %>
 
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %>  <br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %> <br/>
-    <%= f.text_area :description  %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
-
-<%= link_to "Back to article listing", articles_path %>
