--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Hello this is the home page</h1>
 
-<%= link_to 'About Page', about_path %>
+<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About Page', about_path %>
