--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,15 +8,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+
+    <%# <a class="navbar-brand" id="logo" href="#">Alpha-Blog</a> !!!! this is the converted to line below%>
+
+      <%= link_to "Alpha blog", root_path, class: "navbar-brand", id: "logo" %>
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
+        <%# <li class=""><a href="#">Link <span class="sr-only">(current)</span></a></li> %>
+        <li> <%= link_to "Articles", articles_path %> </li>
+        <%# <li><a href="#">Link</a></li> %> 
+        <li><%= link_to "New Article", new_article_path %> </li>
+
+
+        <%
+=begin%>
+ <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
@@ -27,15 +37,28 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li>
+        </li> 
+<%
+=end%>
+
+
+
       </ul>
-      <form class="navbar-form navbar-left">
+
+      <%
+=begin%>
+ <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
+      </form> 
+<%
+=end%>
+
+      <%
+=begin%>
+ <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -47,7 +70,12 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
-      </ul>
+      </ul> 
+<%
+=end%>
+
+
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
