--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Hello this is the home page</h1>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to 'Sign up now', "#", class: "btn btn-danger btn-lg btn-xlarge" %> 
+</div>
 
-<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About Page', about_path %>
