Styled Edit and Create new forms

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit exisiting article</h1>
+<h1 align="center" >Edit exisiting article</h1>
 
-render <%= render 'form' %>
+<%= render 'form' %>
 
