--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,3 +65,13 @@ $navbar-default-bg: black;
   float: left;
   margin-left: 15px;
 }
+
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description {
+  margin-top: 0;
+  float: left;
+}
