--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -86,3 +86,8 @@ $navbar-default-bg: black;
   padding-top: 15px;
   padding-bottom: 15px;
 }
+
+.article-meta-details {
+  // border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
