Finished basic auth. Pushing to production

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h1 align="center">All Alpha Bloggers</h1>
 <div align="center">
+  <%= will_paginate %>
   <% @users.each do |user| %>
     <ul class="listing">
       <div class="row">
@@ -8,9 +9,10 @@
           <li class="article-title">
           <%= link_to user.username, user_path(user) %>
           </li>
-          <li><small><%= pluralize(user.articles.count, "article") if user.articles %></li>
+          <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
         </div>
       </div>
     </ul>
   <% end %>
+  <%= will_paginate %>
 </div>
