--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,11 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-
-    <%# <a class="navbar-brand" id="logo" href="#">Alpha-Blog</a> !!!! this is the converted to line below%>
-
+    <%# <a class="navbar-brand" id="logo" href="#">Alpha-Blog</a> !!!! this is the converted to line below %>
       <%= link_to "Alpha blog", root_path, class: "navbar-brand", id: "logo" %>
-
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,62 +17,15 @@
       <ul class="nav navbar-nav">
         <%# <li class=""><a href="#">Link <span class="sr-only">(current)</span></a></li> %>
         <li> <%= link_to "Articles", articles_path %> </li>
-        <%# <li><a href="#">Link</a></li> %> 
-        <li><%= link_to "New Article", new_article_path %> </li>
-
-
-        <%
-=begin%>
- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li> 
-<%
-=end%>
-
-
-
+        <li> <%= link_to "Users", users_path %> </li>
+        <% if logged_in? %>
+          <li><%= link_to "New Article", new_article_path %> </li>
+          <li><%= link_to "View your profile", user_path(current_user) %>
+          <li><%= link_to "Log out", logout_path, method: :delete %> </li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %> </li>
+        <% end %>
       </ul>
-
-      <%
-=begin%>
- <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form> 
-<%
-=end%>
-
-      <%
-=begin%>
- <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul> 
-<%
-=end%>
-
-
-
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
