--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,13 @@
   </div>
 </div>
 <h4 align="center"><%= @user.username %>'s Articles</h4>
-<%= render 'articles/article', obj: @user.articles %>
+<div align="center">
+  <%= link_to "Edit your profile", edit_user_path(current_user) %>
+</div>
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div>
+<%= render 'articles/article', obj: @user_articles %>
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div>
