Added categories and tests...admin categories to nav and did auth/val

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,10 @@
 <h1 align="center">Listing All Categories</h1>
-<div  align="center">
+<% if logged_in? && current_user.admin? %>
+  <div align="center">
+    <%= link_to "Create New Category", new_category_path %>
+  </div>
+<% end %>
+<div align="center">
 <%=  will_paginate %>
   <% @categories.each do |category| %>
     <ul class="listing">
