--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <%# <li class=""><a href="#">Link <span class="sr-only">(current)</span></a></li> %>
+        <li><%= link_to "Categories", categories_path %> </li>
         <li> <%= link_to "Articles", articles_path %> </li>
         <li> <%= link_to "Users", users_path %> </li>
         <% if logged_in? %>
