--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -96,3 +96,14 @@ $navbar-default-bg: black;
   list-style: none;
   padding-left: 0;
 }
+
+.input_checkbox input {
+  width: auto !important;
+}
+
+.badge {
+  background-color: #CEF6F5;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
