--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,13 +19,18 @@
   <h4 class="center description"><strong>Description: </strong></h4>
   <hr>
   <%= simple_format(@article.description) %>
-  <div class="article-actions">
-  <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
-    <%= link_to "Edit Article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-    <%= link_to "Delete Article", article_path(@article), method: :delete,
-                                                  data: {confirm: "Are you sure you want to delete the article?"},
-                                                  class: "btn btn-xs btn-danger" %>
+
+  <% if @article.categories.any? %>
+    <p>Categories: <%= render @article.categories %></p>
   <% end %>
+  
+  <div class="article-actions">
+    <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+      <%= link_to "Edit Article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+      <%= link_to "Delete Article", article_path(@article), method: :delete,
+                                                    data: {confirm: "Are you sure you want to delete the article?"},
+                                                    class: "btn btn-xs btn-danger" %>
+    <% end %>
   <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
   </div>
 </div>
